--- a/menu_lateral.htm
+++ b/menu_lateral.htm
@@ -11,9 +11,7 @@
         <div class="conterne">
             <div>
                 <div>
-                    <div class="conterneimg">
-                        <img src="pintura.png"  >
-                    </div>
+                    
                     <h1>
                         pituras juju
                     </h1>
@@ -23,6 +21,10 @@
                         <h4 class="box">mais sobre nois</h4>
                 </div> 
             </div>
+            <div class="conterneimg">
+                        <img  src="pintura.png"  >
+                        <h3>jão</h3>
+                    </div>
         </div>
    </main>
 </body>
